# mcpmap

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: cves.yaml  fingerprints.yaml  remediations.yaml  shodan_filters.json
docs/: ATTRIBUTIONS.md  DEMO.md  ETHICS.md
docs/superpowers/plans/: 2026-05-10-reset-threat-model.md  2026-05-10-stabilize-and-fix-lies.md  2026-05-10-standardize-data-model.md
src/mcpmap/: cli.py  models.py  pipeline.py
src/mcpmap/audit/: __init__.py  base.py  check_ids.py  correlate.py  remediations.py  runner.py
src/mcpmap/discover/: __init__.py  active.py  configs.py  handshake.py  shodan_source.py
src/mcpmap/fingerprint/: __init__.py  cves.py  db.py
testlab/: README.md  docker-compose.yml
testlab/services/: Dockerfile.python
tests/fixtures/: claude_desktop_config.json
tests/integration/: test_cli_smoke.py  test_lab_full_scan.py
tests/unit/: test_active_http.py  test_active_tcp.py  test_audit_runner.py  test_check_auth_001.py  test_check_auth_002.py  test_check_auth_003.py  test_check_honeypot_cve.py  test_check_ids.py  test_check_inject_001.py  test_check_poison.py  test_check_ssrf_transport.py  test_checks_use_canonical_ids.py  test_cli.py  test_cli_audit_verbose.py  test_configs.py  test_correlate.py  test_cves.py  test_fingerprint_db.py  test_handshake.py  test_models.py  test_poc_out.py  test_rate_limit.py  test_remediation_populated.py  test_remediations.py  test_report_html.py  test_report_json_md.py  test_shodan_source.py
(+27 files in other folders)
