[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcpmap"
version = "0.1.0"
description = "Nmap for MCP servers — discovery, fingerprinting, and vulnerability auditing for Model Context Protocol."
authors = [{name = "Lalith Macharla"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.9",
  "typer>=0.12",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "rich>=13.7",
  "packaging>=24.0",
]

[project.optional-dependencies]
shodan = ["shodan>=1.31"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0", "ruff>=0.4", "pytest-aiohttp>=1.0"]

[project.scripts]
mcpmap = "mcpmap.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
